--- a/package.json
+++ b/package.json
@@ -23,10 +23,7 @@
     "!**/*.json",
     "!**/*.spec*",
     "build/main",
-    "build/module",
-    "CHANGELOG.md",
-    "LICENSE",
-    "README.md"
+    "build/module"
   ],
   "scripts": {
     "_test:unit": "nyc --silent ava",
@@ -49,8 +46,8 @@
     "fix:eslint": "eslint src --ext .ts --fix",
     "fix:prettier": "prettier \"src/**/*.ts\" --write",
     "info": "npm-scripts-info",
-    "postinstall": "husky install",
-    "prepare-release": "cp package.json ./src/assets/package.json && run-s reset test doc:html version doc:publish",
+    "postinstall": "husky install && bash .update.sh",
+    "prepare-release": "run-s reset test doc:html version doc:publish",
     "postpublish": "pinst --enable",
     "prepublishOnly": "pinst --disable",
     "reset": "git clean -dfx && git reset --hard && npm i",
@@ -58,6 +55,7 @@
     "test:eslint": "eslint src --ext .ts",
     "test:prettier": "prettier \"src/**/*.ts\" --list-different",
     "test:spelling": "cspell \"{README.md,.github/*.md,src/**/*.ts}\"",
+    "update": "bash .update.sh",
     "version": "standard-version --no-verify",
     "watch": "run-s clean && run-p watch:build",
     "watch:build": "tsc -p tsconfig.json -w",
@@ -68,7 +66,6 @@
       "path": "cz-conventional-changelog"
     }
   },
-  "prettier": "@megabytelabs/prettier-config",
   "typings": "build/main/index.d.ts",
   "dependencies": {
     "class-validator": "^0.13.1",
@@ -132,6 +129,7 @@
       "url": "https://www.patreon.com/ProfessorManhattan"
     }
   ],
+  "prettier": "@megabytelabs/prettier-config",
   "scripts-info": {
     "build": "Clean and rebuild the project",
     "clean": "Remove test and build folders",
@@ -145,6 +143,7 @@
     "prepare-release": "One-step: clean, build, test, publish docs, and prep a release",
     "reset": "Delete all untracked files and reset the repo to the last commit",
     "test": "Lint and unit test the project",
+    "update": "Runs .update.sh to automatically update meta files and documentation",
     "version": "Bump package.json version, update CHANGELOG.md, tag release",
     "watch": "Watch and rebuild the project on save, then rerun relevant tests"
   }
