--- a/package.json
+++ b/package.json
@@ -85,6 +85,7 @@
     "@types/update-notifier": "^5.0.0",
     "@types/validate-npm-package-name": "^3.0.0",
     "@typescript-eslint/eslint-plugin": "^4.15.2",
+    "@typescript-eslint/eslint-plugin-tslint": "^4.22.0",
     "@typescript-eslint/parser": "^4.15.2",
     "ava": "^3.12.1",
     "codecov": "^3.8.1",
@@ -96,6 +97,7 @@
     "eslint-plugin-import": "^2.22.0",
     "eslint-plugin-jsdoc": "^32.2.0",
     "eslint-plugin-prefer-arrow": "^1.2.3",
+    "eslint-plugin-react": "^7.23.2",
     "eslint-plugin-unicorn": "^29.0.0",
     "gh-pages": "^3.1.0",
     "husky": "^6.0.0",
