Fallback to eslint matic-number rules instead of eslint-tslint plugin's rule

--- a/.eslintrc
+++ b/.eslintrc
@@ -64,7 +64,6 @@
     ],
     "@typescript-eslint/no-inferrable-types": "off",
     "@typescript-eslint/no-invalid-void-type": "error",
-    "@typescript-eslint/no-magic-numbers": "error",
     "@typescript-eslint/no-namespace": "off",
     "@typescript-eslint/no-throw-literal": "error",
     "@typescript-eslint/no-unnecessary-type-arguments": "error",
@@ -123,6 +122,7 @@
     "no-eval": "error",
     "no-extra-bind": "error",
     "no-invalid-this": "error",
+    "no-magic-numbers": ["error", { "ignore": [0, 1], "ignoreArrayIndexes": true, "enforceConst": true }],
     "no-new-func": "error",
     "no-new-wrappers": "error",
     "no-param-reassign": "error",
